--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,1 +1,8 @@
 server.port=80
+
+spring.datasource.url=jdbc:mysql://localhost/dasboot
+spring.datasource.username=root
+spring.datasource.password=Tipperary123
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#flyway.locations=classpath:db/migration/mysql
